# Modules/Role/Routes/admin.php
@@ -3,6 +3,7 @@
 declare(strict_types=1);
 
 use Illuminate\Support\Facades\Route;
+use Modules\Role\Http\Controllers\Admin\ColumnController;
 use Modules\Role\Http\Controllers\Admin\PermissionColumnController;
 use Modules\Role\Http\Controllers\Admin\PermissionController;
 use Modules\Role\Http\Controllers\Admin\RoleController;
@@ -13,7 +14,9 @@ Route::group(['middleware' => 'tenant.set'], function () {
 
     Route::get('permissions/all', [PermissionController::class, 'all']);
     Route::apiResource('permissions', PermissionController::class)->only('index', 'show');
+    Route::apiResource('permissions/columns', ColumnController::class);
 
     // Columns
-    Route::put('/permissions/{id}/columns', [PermissionColumnController::class, 'update'])->name('permissions.columns.update');
+    Route::put('/permissions/{id}/columns', [PermissionColumnController::class, 'update'])
+        ->name('permissions.columns.update');
 });
